--- a/Website-for-NGO--Software-Engineering-Project-master/style.css
+++ b/Website-for-NGO--Software-Engineering-Project-master/style.css
@@ -114,6 +114,15 @@ header
     height: auto;
 }
 
+footer
+{
+    margin: 0;
+    padding: 0;
+    color:white;
+    margin-top: 500px;
+    
+}
+
 
 
 
